...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fui_email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/primaryColor" />
            </android.support.design.widget.TextInputLayout>
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/inputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusedByDefault="false"
                    android:hint="@string/fui_password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/primaryColor" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="60sp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@color/fui_bgGoogle"
                android:drawableStart="@drawable/ic_email_black_24dp"
...
